--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" package="perassoft.rts">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="perassoft.rts">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -20,8 +22,9 @@
         <activity
             android:name=".PlayerActivity"
             android:exported="true"
-            android:theme="@style/Theme.RTS"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"
+            android:theme="@style/Theme.RTS"
             tools:ignore="LockedOrientationActivity">
 
             <intent-filter>
@@ -31,8 +34,7 @@
         </activity>
         <service
             android:name=".PlayerService"
-            android:foregroundServiceType="mediaPlayback"
-            android:exported="false">
-        </service>
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback"/>
     </application>
 </manifest>
