--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,8 @@
         <receiver android:name=".HeadSetIntentReceiver"
             android:enabled="true"
             android:exported="true">
-            <intent-filter
-                android:priority="10000">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_HEADSET_PLUG"/>
                 <action android:name="android.intent.action.MEDIA_BUTTON"/>
             </intent-filter>
         </receiver>
